--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 # PetTrack
 # ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
+src/__vm/
+
+
+# ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
 ### VisualStudioCode ###
 .vscode/*
