Sensor Code Update
Done
 - Bluetooth : Inherited `SoftwareSerial`
 - MPU9250   : Wrapped I2C Library

To Do
 - LICENSE change(to LGPLv3)
 - Test cases
 - Memory Optimization

--- a/projects/BuildTest.vcxproj
+++ b/projects/BuildTest.vcxproj
@@ -48,7 +48,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\SoftwareSerial\src;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\SoftwareSerial\src\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Users\luncl\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\eightanaloginputs;D:\PetTrack\src;C:\Program Files (x86)\Arduino\hardware\tools\avr\avr\include\;C:\Program Files (x86)\Arduino\hardware\tools\avr\avr\include\avr\;C:\Program Files (x86)\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\SoftwareSerial\src;C:\Users\luncl\Documents\Arduino\libraries\I2C-Sensor-Lib_iLib\src;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\Wire\src;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Users\luncl\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\eightanaloginputs;D:\PetTrack\src;C:\Program Files (x86)\Arduino\hardware\tools\avr\avr\include\;C:\Program Files (x86)\Arduino\hardware\tools\avr\avr\include\avr\;C:\Program Files (x86)\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>D:\PetTrack\projects\__vm\.src.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=106013;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -82,9 +82,10 @@
     <ClInclude Include="..\src\alias.h" />
     <ClInclude Include="..\src\module\bluetooth.h" />
     <ClInclude Include="..\src\module\classifier.h" />
-    <ClInclude Include="..\src\module\imu_sensor.h" />
     <ClInclude Include="..\src\module\led.h" />
+    <ClInclude Include="..\src\module\mpu9250.h" />
     <ClInclude Include="..\src\utils\stop_watch.hpp" />
+    <ClInclude Include="__vm\.src.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\docs\bluetooth.md" />
@@ -94,9 +95,7 @@
     <None Include="..\src\BuildTest.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\module\bluetooth.cpp" />
     <ClCompile Include="..\src\module\classifier.cpp" />
-    <ClCompile Include="..\src\module\imu_sensor.cpp" />
     <ClCompile Include="..\src\module\led.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
