Nano compatible projects

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
 src/__vm/
+[Pp]rojects/__vm/*
 
 
 # ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
