--- a/Nano/Nano.vcxproj
+++ b/Nano/Nano.vcxproj
@@ -52,7 +52,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\libraries\Firmata;C:\Program Files (x86)\Arduino\libraries\Firmata\utility;C:\Program Files (x86)\Arduino\libraries\Servo\src;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\libraries\Wire\src;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\libraries\Wire\src\utility;C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\Extensions\bjgs31r1.33a\Micro Platforms\visualmicro\ide\libraries;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\libraries;C:\Program Files (x86)\Arduino\libraries;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\cores\arduino;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\variants\eightanaloginputs;$(ProjectDir)..\Nano;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\avr\include\;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\avr\include\avr\;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\Extensions\bjgs31r1.33a\Micro Platforms\visualmicro\ide\libraries;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\libraries;C:\Program Files (x86)\Arduino\libraries;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\cores\arduino;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.18\variants\eightanaloginputs;$(ProjectDir)..\Nano;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\avr\include\;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\avr\include\avr\;C:\Users\luncl\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.4-arduino2\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.Nano.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=10801;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -82,8 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="led.h" />
+    <ClInclude Include="Pets.h" />
     <ClInclude Include="stop_watch.h" />
     <ClInclude Include="__vm\.Nano.vsarduino.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Pets.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
